tests/spec/lex/snapshots/range_to_inclusive.snap
---
source: tests/spec/lex/mod.rs
description: "..=10"
---
LexResult {
    tokens: [
        Token {
            kind: DotDotEqual,
            text: "..=",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: Integer,
            text: "10",
            byte_offset: 3,
            byte_length: 2,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 5,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
