tests/spec/lex/snapshots/raw_string_empty.snap
---
source: tests/spec/lex/mod.rs
description: "r\"\""
---
LexResult {
    tokens: [
        Token {
            kind: RawString,
            text: "r\"\"",
            byte_offset: 0,
            byte_length: 3,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 3,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
