tests/spec/lex/snapshots/raw_string_multiline.snap
---
source: tests/spec/lex/mod.rs
description: |-
  r"a
  b"
---
LexResult {
    tokens: [
        Token {
            kind: RawString,
            text: "r\"a\nb\"",
            byte_offset: 0,
            byte_length: 6,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 6,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
