tests/spec/lex/snapshots/raw_string_simple.snap
---
source: tests/spec/lex/mod.rs
description: "r\"hello\""
---
LexResult {
    tokens: [
        Token {
            kind: RawString,
            text: "r\"hello\"",
            byte_offset: 0,
            byte_length: 8,
        },
        Token {
            kind: EOF,
            text: "",
            byte_offset: 8,
            byte_length: 0,
        },
    ],
    errors: [],
    blank_lines: [],
}
